# msp430emulator

./: CMakeLists.txt  CMakeLists.txt.in  format.sh
debugger/include/: debugger.h
debugger/src/: CMakeLists.txt  debugger.cpp
documents/: MSP430_Test.out  old.out
emulator/include/: emulator.h
emulator/src/: CMakeLists.txt  emulator.cpp
memory/include/: memory.h
memory/src/: CMakeLists.txt  memory.cpp
peripheral/include/: clock.h  p1.h  peripheral.h
peripheral/src/: CMakeLists.txt  clock.cpp  p1.cpp
processor/include/: processor.h
processor/src/: CMakeLists.txt  processor.cpp  processor_opcodes.cpp
test/: CMakeLists.txt
test/debugger/: CMakeLists.txt
test/debugger/include/: debugger_test.h
test/debugger/src/: CMakeLists.txt  debugger_test.cpp
test/memory/: CMakeLists.txt
test/memory/include/: memory_test.h
test/memory/src/: CMakeLists.txt  memory_test.cpp
test/peripheral/: CMakeLists.txt
test/peripheral/include/: clock_test.h
test/peripheral/src/: CMakeLists.txt  clock_test.cpp
test/processor/: CMakeLists.txt
test/processor/include/: processor_test.h
test/processor/src/: CMakeLists.txt  processor_test.cpp
test/read_elf/: CMakeLists.txt
test/read_elf/include/: read_elf_test.h
test/read_elf/src/: CMakeLists.txt  read_elf_test.cpp
tools/include/: read_elf.h
tools/src/: CMakeLists.txt  read_elf.cpp
