add_definitions(-DDOCUMENT_PATH=\"${CMAKE_SOURCE_DIR}/documents/MSP430_Test.out\")
include_directories(${CMAKE_SOURCE_DIR}/test/debugger/include)
link_libraries(processor)
add_executable(debugger_test debugger_test.cpp)
target_link_libraries(debugger_test PUBLIC gtest_main)
# target_link_libraries(debugger_test PUBLIC processor)
# target_link_libraries(debugger_test PUBLIC memory)
target_link_libraries(debugger_test PUBLIC debugger processor memory elf_reader)
# target_link_libraries(debugger_test PUBLIC elf_reader)
add_test(debugger_test_exe debugger_test)
enable_testing()