add_definitions(-DDOCUMENT_PATH=\"${CMAKE_SOURCE_DIR}/documents/MSP430_Test.out\")
include_directories(${CMAKE_SOURCE_DIR}/test/processor/include)
add_executable(processor_test processor_test.cpp)
target_link_libraries(processor_test PUBLIC gtest_main)
target_link_libraries(processor_test PUBLIC processor)
target_link_libraries(processor_test PUBLIC memory)
target_link_libraries(processor_test PUBLIC elf_reader)
add_test(processor_test_exe processor_test)
enable_testing()