add_definitions(-DDOCUMENT_PATH=\"${CMAKE_SOURCE_DIR}/documents/MSP430_Test.out\")
add_definitions(-DTEXT_DOCUMENT_PATH=\"${CMAKE_SOURCE_DIR}/documents/test.txt\")
add_definitions(-DPDF_DOCUMENT_PATH=\"${CMAKE_SOURCE_DIR}/documents/msp430_manual.pdf\")
include_directories(${CMAKE_SOURCE_DIR}/test/read_elf/include)
add_executable(read_elf read_elf_test.cpp)
target_link_libraries(read_elf PUBLIC gtest_main)
target_link_libraries(read_elf PUBLIC memory)
target_link_libraries(read_elf PUBLIC elf_reader)
add_test(read_elf_exe read_elf)
enable_testing()